--- a/PoddApp.BL/PoddApp.BL.csproj
+++ b/PoddApp.BL/PoddApp.BL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PoddApp.DAL\PoddApp.DAL.csproj" />
     <ProjectReference Include="..\PoddApp.Models\PoddApp.Models.csproj" />
   </ItemGroup>
