--- a/PoddApp.DAL/PoddApp.DAL.csproj
+++ b/PoddApp.DAL/PoddApp.DAL.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
   </ItemGroup>
 
