--- a/PoddApp.UI/PoddApp.UI.csproj
+++ b/PoddApp.UI/PoddApp.UI.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.10" />
+    <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
