--- a/PoddApp.DAL/PoddApp.DAL.csproj
+++ b/PoddApp.DAL/PoddApp.DAL.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
