--- a/PoddApp.UI/PoddApp.UI.csproj
+++ b/PoddApp.UI/PoddApp.UI.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.10" />
     <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
