--- a/PoddApp.UI/PoddApp.UI.csproj
+++ b/PoddApp.UI/PoddApp.UI.csproj
@@ -25,6 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="PopUpYesNoFormEp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
