--- a/PoddApp.UI/appsettings.json
+++ b/PoddApp.UI/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Mongo": {
     "ConnectionString": "mongodb+srv://admin:password123%21@cluster0.586hq6a.mongodb.net/?retryWrites=true&w=majority",
-    "Database": "PoddAppDB"
+    "Database": "opponering" 
   }
 }
